# ttyhmaster

./: .gitignore  Cargo.toml  README.md
integration/ttyhmaster_punbb_bridge/: README.md  chpass.php  fn_validate_username_end.php  functions.php  init.php  manifest.xml  minecraft.php  minecraft2.php  pf_change_details_minecraft_section.php  pf_change_details_minecraft_section_validation.php  pf_change_details_qr_update_user.php  pf_change_password.php  register.php  rg_register_pre_add_user.php
integration/ttyhmaster_punbb_bridge/lang/English/: pf_section.php  profile_ttyhmaster.php
integration/ttyhmaster_punbb_bridge/lang/Russian/: pf_section.php  profile_ttyhmaster.php
migrations/mysql/: 20240101155341_create_tables.sql
migrations/sqlite/: 20240101155341_create_tables.sql
src/: api.rs  assets.rs  config.rs  db.rs  main.rs  mojang.rs  player_profile.rs  signing.rs  util.rs
src/extensions/: mod.rs  rejection.rs  routing.rs
src/payload/: assets.rs  bridge.rs  certificates.rs  error.rs  join.rs  login.rs  mod.rs  profile.rs  status.rs
tools/internal-api-scripts/: create-player.sh  read-player.sh  update-player.sh
tools/internal-api-scripts/payload/: create-player.json  headers.txt  update-player.json
tools/mc-master-migration/: migrate.py
workdir/: config.toml
