[package]
name = "ttyhmaster"
version = "0.1.0"
edition = "2021"

[features]
default = []
sqlite = []
mysql = []

[dependencies]
tokio = { version = "1", features = ["full"] }
sqlx = { version = "0.7", features = ["runtime-tokio-rustls", "sqlite", "mysql"] }
axum = { version = "0.7", features = ["macros"] }
tower = "0.4"
tower-http = { version = "0.5", features = ["fs", "trace"] }
reqwest = { version = "0.12", features = ["default-tls"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"
anyhow = "1.0"
tracing = "0.1"
tracing-subscriber = "0.3"
uuid = { version = "1.9", features = ["v4"] }
sha1 = { version = "0.10", features = ["oid"] }
base64 = "0.22"
imagesize = "0.13.0"
rsa = "0.9"
rand = "0.8.5"
chrono = "0.4"